--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-avatar": "1.1.1",
     "@shikijs/rehype": "1.24.0",
     "@types/mdx": "2.0.13",
+    "geist": "^1.3.1",
     "lucide-react": "0.462.0",
     "next": "15.0.3",
     "next-themes": "0.4.3",
