--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@content-collections/core": "0.7.3",
     "@content-collections/next": "0.2.4",
+    "@next/eslint-plugin-next": "15.0.3",
     "@pigment-css/nextjs-plugin": "latest",
     "@types/node": "22.10.1",
     "@types/react": "18.3.12",
@@ -41,8 +42,11 @@
     "@types/unist": "3.0.3",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "prettier": "3.4.1",
     "typescript": "5.7.2",
+    "typescript-eslint": "8.17.0",
     "unist-builder": "4.0.0",
     "unist-util-visit": "5.0.0"
   }
