--- a/website/package.json
+++ b/website/package.json
@@ -15,20 +15,15 @@
   "dependencies": {
     "@base_ui/react": "1.0.0-alpha.3",
     "@content-collections/mdx": "0.2.0",
-    "@mdx-js/loader": "3.1.0",
-    "@mdx-js/react": "3.1.0",
-    "@next/mdx": "15.0.3",
     "@pigment-css/react": "latest",
     "@radix-ui/react-avatar": "1.1.1",
-    "@shikijs/rehype": "1.24.0",
-    "@types/mdx": "2.0.13",
+    "@types/mdx": "^2.0.13",
     "geist": "^1.3.1",
     "lucide-react": "0.462.0",
     "next": "15.0.3",
     "next-themes": "0.4.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "shiki": "1.24.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -45,6 +40,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "prettier": "3.4.1",
+    "rehype-pretty-code": "0.14.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.17.0",
     "unist-builder": "4.0.0",
