--- a/website/package.json
+++ b/website/package.json
@@ -14,12 +14,10 @@
   },
   "dependencies": {
     "@base_ui/react": "1.0.0-alpha.3",
-    "@content-collections/mdx": "0.2.0",
     "@pigment-css/react": "latest",
     "@radix-ui/react-avatar": "1.1.1",
-    "@types/mdx": "^2.0.13",
     "geist": "^1.3.1",
-    "lucide-react": "0.462.0",
+    "lucide-react": "0.468.0",
     "next": "15.0.3",
     "next-themes": "0.4.3",
     "react": "18.3.1",
@@ -28,18 +26,20 @@
   },
   "devDependencies": {
     "@content-collections/core": "0.7.3",
+    "@content-collections/mdx": "0.2.0",
     "@content-collections/next": "0.2.4",
     "@next/eslint-plugin-next": "15.0.3",
     "@pigment-css/nextjs-plugin": "latest",
+    "@types/mdx": "2.0.13",
     "@types/node": "22.10.1",
-    "@types/react": "18.3.12",
+    "@types/react": "18.3.13",
     "@types/react-dom": "18.3.1",
     "@types/unist": "3.0.3",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react-hooks": "5.0.0",
-    "prettier": "3.4.1",
+    "prettier": "3.4.2",
     "rehype-pretty-code": "0.14.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.17.0",
