--- a/website/package.json
+++ b/website/package.json
@@ -40,7 +40,10 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "prettier": "3.4.2",
+    "rehype-autolink-headings": "7.1.0",
     "rehype-pretty-code": "0.14.0",
+    "rehype-slug": "6.0.0",
+    "remark-gfm": "4.0.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.17.0",
     "unist-builder": "4.0.0",
