--- a/website/package.json
+++ b/website/package.json
@@ -16,37 +16,44 @@
     "@base_ui/react": "1.0.0-alpha.3",
     "@pigment-css/react": "latest",
     "@radix-ui/react-avatar": "1.1.1",
-    "geist": "^1.3.1",
+    "geist": "1.3.1",
     "lucide-react": "0.468.0",
-    "next": "15.0.3",
-    "next-themes": "0.4.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "15.0.4",
+    "next-themes": "0.4.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@content-collections/core": "0.7.3",
     "@content-collections/mdx": "0.2.0",
     "@content-collections/next": "0.2.4",
-    "@next/eslint-plugin-next": "15.0.3",
+    "@next/eslint-plugin-next": "15.0.4",
     "@pigment-css/nextjs-plugin": "latest",
+    "@types/mdast": "4.0.4",
     "@types/mdx": "2.0.13",
     "@types/node": "22.10.1",
-    "@types/react": "18.3.13",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.1",
     "@types/unist": "3.0.3",
     "eslint": "9.16.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "mdast-util-toc": "7.1.0",
     "prettier": "3.4.2",
     "rehype-autolink-headings": "7.1.0",
     "rehype-pretty-code": "0.14.0",
     "rehype-slug": "6.0.0",
+    "remark": "15.0.1",
     "remark-gfm": "4.0.0",
+    "remark-parse": "11.0.0",
+    "remark-stringify": "11.0.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.17.0",
+    "unified": "11.0.5",
     "unist-builder": "4.0.0",
-    "unist-util-visit": "5.0.0"
+    "unist-util-visit": "5.0.0",
+    "vfile": "6.0.3"
   }
 }
