--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@base_ui/react": "1.0.0-alpha.3",
     "@pigment-css/react": "latest",
     "@radix-ui/react-avatar": "1.1.1",
+    "date-fns": "4.1.0",
     "geist": "1.3.1",
     "lucide-react": "0.468.0",
     "next": "15.0.4",
