--- a/website/package.json
+++ b/website/package.json
@@ -19,26 +19,28 @@
     "date-fns": "4.1.0",
     "geist": "1.3.1",
     "lucide-react": "0.468.0",
-    "next": "15.1.1",
+    "next": "15.1.2",
     "next-themes": "0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "zod": "3.24.1"
   },
   "devDependencies": {
-    "@content-collections/core": "0.7.3",
-    "@content-collections/mdx": "0.2.0",
+    "@content-collections/core": "0.8.0",
     "@content-collections/next": "0.2.4",
-    "@next/eslint-plugin-next": "15.1.1",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/eslint-plugin-next": "15.1.2",
+    "@next/mdx": "15.1.2",
     "@pigment-css/nextjs-plugin": "latest",
     "@types/mdast": "4.0.4",
     "@types/mdx": "2.0.13",
     "@types/node": "22.10.2",
-    "@types/react": "19.0.1",
+    "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "@types/unist": "3.0.3",
     "eslint": "9.17.0",
-    "eslint-config-next": "15.1.1",
+    "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react-hooks": "5.1.0",
     "mdast-util-toc": "7.1.0",
@@ -46,8 +48,9 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-pretty-code": "0.14.0",
     "rehype-slug": "6.0.0",
-    "remark": "15.0.1",
+    "remark-frontmatter": "5.0.0",
     "remark-gfm": "4.0.0",
+    "remark-mdx-frontmatter": "5.0.0",
     "remark-parse": "11.0.0",
     "remark-stringify": "11.0.0",
     "typescript": "5.7.2",
